kubernetes/httpd-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd-proxy
  name: httpd-proxy
spec:
  ports:
  - nodePort: 31030
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd-proxy
  sessionAffinity: None
  type: NodePort
