kubernetes/urlpath-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: urlpath
  name: urlpath
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: urlpath
  type: ClusterIP
